# to-do

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test-project.yml
app/: admin_fixture.json
app/common/: models.py  permissions.py
app/config/: settings.py  urls.py  wsgi.py  yasg.py
app/tasks/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
app/tasks/migrations/: 0001_initial.py  0002_initial.py
app/tests/: conftest.py  factories.py
app/tests/test_endpoints/: test_tasks.py
app/tests/test_services/: test_tasks.py
app/user/: admin.py  models.py
app/user/migrations/: 0001_initial.py
