[tool.poetry]
name = "to-do"
version = "0.1.0"
description = ""
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]
readme = "README.md"
packages = [{include = "to_do"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.21.4"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
