[tool.poetry]
name = "to-do"
version = "0.1.0"
description = ""
authors = ["Rezuan Dzibov <rezuan.dzbov@gmail.com>"]
readme = "README.md"
packages = [{include = "to_do"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.21.4"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"
pillow = "^9.3.0"
pytest = "^7.2.0"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.0"
pytest-django = "^4.5.2"
djoser = "^2.1.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
